# ScratchGen

./: README.md  pyproject.toml
src/ScratchGen/: __init__.py  asset.py  block.py  broadcast.py  constants.py  datacontainer.py  ids.py  opcodes.py  project.py  script.py  sprite.py  stage.py  target.py
src/ScratchGen/blocks/: __init__.py  control.py  events.py  looks.py  motion.py  myblocks.py  operators.py  sensing.py  sound.py  variables.py
